results/SpecGenBench/4-shot/log-RepeatedNumNested-2023_11_28_01_32_31.txt
public class RepeatedNumNested {
    //@ requires arr != null;
    //@ ensures \result < arr.length && \result >= 0 ==> arr[\result] == arr[j] && (\forall int i; 0 <= i && i < \result; arr[i] != arr[j]);
    //@ ensures \result == -1 ==> (\forall int i; 0 <= i && i < arr.length; (\forall int j; i+1 <= j && j < arr.length; arr[i] != arr[j]));
    public static int repeatedNum(int[] arr) {
        for (int i = 0; i < arr.length; ++i) {
            for (int j = i + 1; j < arr.length; ++j) {
                if(arr[i] == arr[j])
                    return i;
            }
        }
        return -1;
    }
}
/home/max/Documents/JMLGPT/tmp/RepeatedNumNested.java:3: error: cannot find symbol
    //@ ensures \result < arr.length && \result >= 0 ==> arr[\result] == arr[j] && (\forall int i; 0 <= i && i < \result; arr[i] != arr[j]);
                                                                             ^
  symbol:   variable j
  location: class RepeatedNumNested
/home/max/Documents/JMLGPT/tmp/RepeatedNumNested.java:3: error: cannot find symbol
    //@ ensures \result < arr.length && \result >= 0 ==> arr[\result] == arr[j] && (\forall int i; 0 <= i && i < \result; arr[i] != arr[j]);
                                                                                                                                        ^
  symbol:   variable j
  location: class RepeatedNumNested
2 errors

